--- a/components/SubMenu.html
+++ b/components/SubMenu.html
@@ -17,7 +17,7 @@
         
         <li>
           <a href="https://www.ds3comunicaciones.com/ubiquiti/unifi/precios_unifi.html" target="_blank"
-             class="flex flex-col items-center hover:bg-gray-100 p-3 rounded-md cursor-pointer ease duration-200 w-24 md:w-32 shrink-0">
+             class="menu-item flex flex-col items-center hover:bg-gray-100 p-3 rounded-md cursor-pointer ease duration-200 w-24 md:w-32 shrink-0">
             <div class="h-12 flex items-center justify-center">
               <svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg" class="w-8 h-8 md:w-auto md:h-auto">
                 <path fill-rule="evenodd" clip-rule="evenodd"
@@ -31,7 +31,7 @@
 
         <li>
           <a href="https://www.ds3comunicaciones.com/ubiquiti/unifi/precios_powerbeam.html" target="_blank"
-             class="flex flex-col items-center hover:bg-gray-100 p-3 rounded-md cursor-pointer ease duration-200 w-24 md:w-32 shrink-0">
+             class="menu-item flex flex-col items-center hover:bg-gray-100 p-3 rounded-md cursor-pointer ease duration-200 w-24 md:w-32 shrink-0">
             <div class="h-12 flex items-center justify-center">
               <svg width="35" height="38" viewBox="0 0 35 38" fill="none" xmlns="http://www.w3.org/2000/svg" class="w-7 h-auto md:w-auto md:h-auto">
                 <path fill-rule="evenodd" clip-rule="evenodd"
@@ -45,7 +45,7 @@
 
         <li>
           <a href="https://www.ds3comunicaciones.com/ubiquiti/unifi/precios_airFiber.html" target="_blank"
-             class="flex flex-col items-center hover:bg-gray-100 p-3 rounded-md cursor-pointer ease duration-200 w-24 md:w-32 shrink-0">
+             class="menu-item flex flex-col items-center hover:bg-gray-100 p-3 rounded-md cursor-pointer ease duration-200 w-24 md:w-32 shrink-0">
             <div class="h-12 flex items-center justify-center">
               <svg width="45" height="38" viewBox="0 0 45 38" fill="none" xmlns="http://www.w3.org/2000/svg" class="w-8 h-auto md:w-auto md:h-auto">
                 <path fill-rule="evenodd" clip-rule="evenodd"
@@ -58,7 +58,7 @@
         </li>
         <li>
           <a href="https://www.ds3comunicaciones.com/ubiquiti/unifi/precios_antenas.html" target="_blank"
-            class="flex flex-col items-center hover:bg-gray-100 p-3 rounded-md cursor-pointer ease duration-200 w-24 md:w-32 shrink-0">
+            class="menu-item flex flex-col items-center hover:bg-gray-100 p-3 rounded-md cursor-pointer ease duration-200 w-24 md:w-32 shrink-0">
             <div class="h-12 flex items-center justify-center">
               <svg width="35" height="40" viewBox="0 0 35 40" fill="none" xmlns="http://www.w3.org/2000/svg" class="w-7 h-auto md:w-auto md:h-auto">
                 <path fill-rule="evenodd" clip-rule="evenodd"
@@ -71,7 +71,7 @@
         </li>
         <li>
           <a href="https://www.ds3comunicaciones.com/ubiquiti/unifi/precios_LTU_5GHz.html" target="_blank"
-            class="flex flex-col items-center hover:bg-gray-100 p-3 rounded-md cursor-pointer ease duration-200 w-24 md:w-32 shrink-0">
+            class="menu-item flex flex-col items-center hover:bg-gray-100 p-3 rounded-md cursor-pointer ease duration-200 w-24 md:w-32 shrink-0">
             <div class="h-12 flex items-center justify-center">
               <svg width="43" height="38" viewBox="0 0 43 38" fill="none" xmlns="http://www.w3.org/2000/svg" class="w-8 h-auto md:w-auto md:h-auto">
                 <path fill-rule="evenodd" clip-rule="evenodd"
@@ -84,7 +84,7 @@
         </li>
         <li>
           <a href="https://www.ds3comunicaciones.com/ubiquiti/unifi/precios_switch.html" target="_blank"
-            class="flex flex-col items-center hover:bg-gray-100 p-3 rounded-md cursor-pointer ease duration-200 w-24 md:w-32 shrink-0">
+            class="menu-item flex flex-col items-center hover:bg-gray-100 p-3 rounded-md cursor-pointer ease duration-200 w-24 md:w-32 shrink-0">
             <div class="h-12 flex items-center justify-center">
               <svg width="94" height="34" viewBox="0 0 94 34" fill="none" xmlns="http://www.w3.org/2000/svg" class="w-16 h-auto md:w-auto md:h-auto">
                 <path fill-rule="evenodd" clip-rule="evenodd"
